# floor-swap

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  page.html  pnpm-lock.yaml
.github/actions/setup/: action.yml
.github/workflows/: deploy-api.yml  deploy-client.yml  fix-client-ws-url.yml  main.yml  program.yml
apps/api/: .dev.vars  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/api/src/: index.ts
apps/api/src/dos/: index.ts  txs-listener.ts  ws-server.ts
apps/client/: package.json  tsconfig.cloudflare.json  tsconfig.cloudflare.tsbuildinfo  tsconfig.node.tsbuildinfo  worker-configuration.d.ts  wrangler.jsonc
apps/client/.react-router/types/: +routes.ts
apps/client/app/: app.css  root.tsx  routes.ts
apps/client/app/actions/: index.ts
apps/program/: Cargo.toml  README.md  package.json
apps/program/program/: idl.json
clients/js/: README.md  package.json  pnpm-lock.yaml  tsup.config.ts
clients/js/test/: _increment.ts  _mpl-core.ts  _setup.ts  create.test.ts  deposit.test.ts  set-active.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
program/src/state/: pool.rs
program/src/utils/: account.rs  mod.rs
scripts/: generate-clients.mjs  generate-idls.mjs  start-validator.mjs  utils.mjs
scripts/client/: format-js.mjs  lint-js.mjs  publish-js.mjs  test-js.mjs
scripts/program/: build.mjs  format.mjs  lint.mjs  test.mjs
(+33 files in other folders)
